Practica5 Funcionalidad de cookies

--- a/Ejercicio_P5/angelo_P5/views/index_Catalan.html
+++ b/Ejercicio_P5/angelo_P5/views/index_Catalan.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h1>Registre d'usuario</h1>
+    <h1>Registre d'usuari</h1>
 
     <form method="POST" action="../Index.php">
         <div>
@@ -57,7 +57,8 @@
     <br>
     <br>
     <a href="../T_COOKIES/deleteCokie.php">Eliminar Galleta</a>
-    <a href="../T_COOKIES/index_Cookie.php">Volver a seleccion de idioma</a>
+    <br>
+    <a href="../T_COOKIES/index_Cookie.php">Tornar a una selecció d'idioma</a>
       
 </body>
 </html>
