--- a/Ejercicio_P5/angelo_P5/views/login_Catalan.html
+++ b/Ejercicio_P5/angelo_P5/views/login_Catalan.html
@@ -24,10 +24,11 @@
         
      </form> 
      <br>   
-     <a href="index.html">Registra't</a> <br>
+     <a href="index_Catalan.html">Registra't</a> <br>
 <br>
 <br>
     <a href="../T_COOKIES/deleteCokie.php">Eliminar Galleta</a>
+    <br>
     <a href="../T_COOKIES/index_Cookie.php">Tornar a una selecció d'idioma</a>
 </body>
 </html>
