--- a/Ejercicio_P5/angelo_P5/views/login_Ingles.html
+++ b/Ejercicio_P5/angelo_P5/views/login_Ingles.html
@@ -24,10 +24,11 @@
         
     </form> 
     <br>   
-    <a href="index.html">Sing Up</a> 
+    <a href="index_Ingles.html">Sing Up</a> 
     <br>
     <br>
     <a href="../T_COOKIES/deleteCokie.php">Delete Cookie</a>
+    <br>
     <a href="../T_COOKIES/index_Cookie.php">Return to language selection</a>
 </body>
 </html>
