--- a/Ejercicio_P5/angelo_P5/views/index_Ingles.html
+++ b/Ejercicio_P5/angelo_P5/views/index_Ingles.html
@@ -56,8 +56,9 @@
     <a href="login_Ingles.html">Log In</a> 
     <br>
     <br>
-    <a href="../T_COOKIES/deleteCokie.php">Eliminar Galleta</a>
-    <a href="../T_COOKIES/index_Cookie.php">Volver a seleccion de idioma</a>
+    <a href="../T_COOKIES/deleteCokie.php">Delete Cookie </a>
+    <br>
+    <a href="../T_COOKIES/index_Cookie.php">Return to language selection</a>
       
 </body>
 </html>
