practica 5 archivos cookies

--- a/Ejercicio_P5/angelo_P5/views/login.html
+++ b/Ejercicio_P5/angelo_P5/views/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de inicio de sesion</title>
 </head>
+<!--log in en español-->
 <body>
     <h1>Iniciar sesion del ususario</h1>
     <form method="POST" action="usuari.php">
