--- a/Ejercicio_P5/angelo_P5/views/index.html
+++ b/Ejercicio_P5/angelo_P5/views/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Registro de Usuario</h1>
-
+<!--Formulario en idioma español-->
     <form method="POST" action="../Index.php">
         <div>
             <label>Identificador</label><br>
@@ -57,8 +57,10 @@
 
     <br>
     <br>
+    <!--enlace a eleminar cookie-->
     <a href="../T_COOKIES/deleteCokie.php">Eliminar Galleta</a>
     <br>
+    <!--Redireccion a index_cookie que no hara nado si la cookie no a sido eliminada-->
     <a href="../T_COOKIES/index_Cookie.php">Volver a seleccion de idioma</a>
       
 </body>
