--- a/Ejercicio_P5/angelo_P5/views/index_Ingles.html
+++ b/Ejercicio_P5/angelo_P5/views/index_Ingles.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>User Register</h1>
-
+<!--Formulario en idioma Ingles-->
     <form method="POST" action="../Index.php">
         <div>
             <label>Id</label><br>
@@ -52,12 +52,15 @@
         
         
     </form>
+    <!---->
     <br>
     <a href="login_Ingles.html">Log In</a> 
     <br>
     <br>
+    <!--enlace a eleminar cookie-->
     <a href="../T_COOKIES/deleteCokie.php">Delete Cookie </a>
     <br>
+    <!--Redireccion a index_cookie que no hara nado si la cookie no a sido elimanada-->
     <a href="../T_COOKIES/index_Cookie.php">Return to language selection</a>
       
 </body>
